| Summary: | ASTERISK-27820: [patch] Add DragonFly BSD. | ||
| Reporter: | Alexander Traud (traud) | Labels: | patch |
| Date Opened: | 2018-04-20 05:07:09 | Date Closed: | 2018-04-25 13:23:34 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/BuildSystem |
| Versions: | 13.20.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | DragonFly BSD 5.2 | Attachments: | ( 0) add_13.patch ( 1) add_15.patch ( 2) add_menuselect.patch ( 3) add_prereq.txt |
| Description: | Adding DragonFly BSD was done in three separate steps:
* contrib/scripts/install_prereq Although very similar to FreeBSD, DragonFly BSD switched from OpenSSL to LibreSSL. Because of that and because some ports are not maintained/updated to LibreSSL, the MySQL client was changed to MariaDB client. Otherwise, the MySQL client would have installed OpenSSL. Beside that, DragonFly BSD faces the same issues as FreeBSD: ASTERISK-27686 (currently: Lua, IMAP C-client, download externals via bash). Additionally, there is an issue with Better Backtraces: libbfd is not linked because it is not a shared but a static library (libbfd.a). * Build System Because DragonFly BSD is very much like FreeBSD, the script ./configure is instructed to use the same code paths. Beside that, several different headers had to be included to compile without error/warning. Please note: Adding DragonFly BSD was not done via an audit of the source code but dry-and-error compile test. * Build System (menuselect) In DragonFly BSD, added libraries from ports are placed into /usr/local. Therefore, this directory must be added for the preprocessor, compiler, and linker in menuselect as well. A port [exists|https://github.com/DragonFlyBSD/DPorts/tree/master/net/asterisk13/dragonfly] for DragonFly BSD. It is expected that not the source but that port is used. Anyway and hopefully, this change here starts the maintainers of that port to give back their changes. I tried to include as many patches possible - but only those I understood and was able to verify. All other changes need some explanation in form of an issue report. Furthermore, the NetBSD port [contains|https://github.com/NetBSD/pkgsrc/tree/trunk/comms/asterisk14/patches] patches for DragonFly BSD. Same for that. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-04-20 05:07:10.445-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-04-25 13:23:35.051-0500 Change 8840 merged by Joshua Colp: menuselect: Add DragonFly BSD. [https://gerrit.asterisk.org/8840|https://gerrit.asterisk.org/8840] By: Friendly Automation (friendly-automation) 2018-04-25 13:30:10.264-0500 Change 8841 merged by Joshua Colp: menuselect: Add DragonFly BSD. [https://gerrit.asterisk.org/8841|https://gerrit.asterisk.org/8841] By: Friendly Automation (friendly-automation) 2018-04-25 13:33:31.873-0500 Change 8839 merged by Jenkins2: menuselect: Add DragonFly BSD. [https://gerrit.asterisk.org/8839|https://gerrit.asterisk.org/8839] By: Friendly Automation (friendly-automation) 2018-04-25 13:57:07.813-0500 Change 8838 merged by Joshua Colp: install_prereq: Add DragonFly BSD. [https://gerrit.asterisk.org/8838|https://gerrit.asterisk.org/8838] By: Friendly Automation (friendly-automation) 2018-04-25 13:58:51.165-0500 Change 8837 merged by Jenkins2: install_prereq: Add DragonFly BSD. [https://gerrit.asterisk.org/8837|https://gerrit.asterisk.org/8837] By: Friendly Automation (friendly-automation) 2018-04-25 14:03:31.991-0500 Change 8836 merged by Jenkins2: install_prereq: Add DragonFly BSD. [https://gerrit.asterisk.org/8836|https://gerrit.asterisk.org/8836] By: Friendly Automation (friendly-automation) 2018-04-30 09:07:19.921-0500 Change 8843 merged by Jenkins2: BuildSystem: Add DragonFly BSD. [https://gerrit.asterisk.org/8843|https://gerrit.asterisk.org/8843] By: Friendly Automation (friendly-automation) 2018-04-30 09:08:35.279-0500 Change 8844 merged by George Joseph: BuildSystem: Add DragonFly BSD. [https://gerrit.asterisk.org/8844|https://gerrit.asterisk.org/8844] By: Friendly Automation (friendly-automation) 2018-04-30 09:09:19.753-0500 Change 8842 merged by George Joseph: BuildSystem: Add DragonFly BSD. [https://gerrit.asterisk.org/8842|https://gerrit.asterisk.org/8842] | ||