BuildSystem: Add DragonFly BSD.

ASTERISK-27820

Change-Id: I310896143e94d65da1c2be3bb448204a8b86d557